# redis-memory-mcp

./: .gitignore  README.md  docker-compose.yaml  start.sh
.claude/: settings.json
.claude-plugin/: marketplace.json
plugin/: .mcp.json  README.md
plugin/.claude-plugin/: mcp.json  plugin.json
plugin/hooks/: project-init.json
plugin/skills/persistent-memory/: SKILL.md
server/: Dockerfile  memory_mcp.py  pyproject.toml
