[project]
name = "redis-memory-mcp"
version = "0.1.0"
description = "Persistent cross-session memory for AI agents — semantic search + KV store with auto-expiry"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
]

[project.scripts]
redis-memory-mcp = "memory_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
